helloworld/helloworld-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helloworld-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-helloworld
      protocol: HTTP
    hosts:
    - helloworld.yjhjerry.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-vs
  namespace: istio-system
spec:
  hosts:
  - helloworld.yjhjerry.com
  gateways:
  - helloworld-gateway
  http:
  - route:
    - destination:
        host: helloworld-service
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld
  namespace: istio-system
spec:
  host: helloworld-service
  trafficPolicy:
    tls:
      mode: DISABLE
